--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-simple-captcha = "*"
 django-crispy-forms = "*"
 "django-bootstrap4" = "*"
 django-mapbox-location-field = "*"
+python-redmine = "*"
 
 [requires]
 python_version = "3.9"
