fixes #39, controllo del centro della posizione, css per mobile

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ mysqlclient = "*"
 django-simple-captcha = "*"
 django-crispy-forms = "*"
 "django-bootstrap4" = "*"
-django-mapbox-location-field = "*"
+django-mapbox-location-field = "==2.0.0"
 python-redmine = "*"
 uwsgi = "*"
 django-admin-ordering = "*"
